# book_shop_microservice

./: .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  setup.cfg
book_shop_microservice/: routers.py
book_shop_microservice/core/: database.py
book_shop_microservice/models/: __init__.py  authors.py  books.py  buyer.py  checks.py  genrs.py  many_to_many_models.py  order_items.py  orders.py  publishing.py  salesmen.py  shop_quantity.py  user.py
book_shop_microservice/routers/: authors.py  books.py  buyer.py  genre.py  login.py  salesmen.py
book_shop_microservice/schemes/: sheme.py  user.py
book_shop_microservice/service/: authors.py  books.py  buyer.py  genre.py  hashing.py  salesmen.py  user.py
book_shop_microservice/service/auth/: authentification.py
migrations/: env.py
migrations/versions/: 38b92b06e2f0_add_some_tables.py  dd9b0cf76def_create_tables.py  ea6a83a8366a_create_tables.py
